--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"homepage": "https://github.com/Andy-0414/NEM-typescript-v3#readme",
 	"dependencies": {
+		"axios": "^0.20.0",
 		"chalk": "^4.1.0",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
@@ -34,6 +35,7 @@
 		"pm2": "^4.4.0"
 	},
 	"devDependencies": {
+		"@types/axios": "^0.14.0",
 		"@types/chalk": "^2.2.0",
 		"@types/compression": "^1.7.0",
 		"@types/cors": "^2.8.6",
