--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"dependencies": {
 		"axios": "^0.20.0",
 		"chalk": "^4.1.0",
+		"cheerio": "^1.0.0-rc.3",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
@@ -37,6 +38,7 @@
 	"devDependencies": {
 		"@types/axios": "^0.14.0",
 		"@types/chalk": "^2.2.0",
+		"@types/cheerio": "^0.22.21",
 		"@types/compression": "^1.7.0",
 		"@types/cors": "^2.8.6",
 		"@types/express": "^4.17.7",
